test/ui/test/missing-intrinsic-type.stderr
error[E060]: the intrinsic type ‘Text’ is not defined
   ┌─ ${TEST_FOLDER}/missing-intrinsic-type.lushui:10:16
   │
10 │ it0: It = make "test"
   │                ══════ the type of this expression

error[E060]: the intrinsic type ‘Nat’ is not defined
   ┌─ ${TEST_FOLDER}/missing-intrinsic-type.lushui:11:16
   │
11 │ it1: It = make 344
   │                ═══ the type of this expression

error: aborting due to 2 previous errors

